# ipel-gamedev

framework/: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test.wit  tmp_test.json
framework/.github/workflows/: ci.yml  cli-release.yml  release-deploy.yml
framework/bot/: Cargo.toml
framework/bot-wasm-host/: Cargo.toml
framework/bot-wasm-host/src/: bindings.rs  lib.rs
framework/bot/src/: lib.rs
framework/client-lib/: game-client.js
framework/common/src/: lib.rs
framework/data/: app.db
framework/deploy/: README.md
framework/deploy/nginx/: gdd.conf.example
framework/docker/ci-builder/: Dockerfile
framework/docs/: architecture.md  bots-external-protocol.md  cli-distribution.md  refactor-plan.md  requirements.md  requirements.sk.md  schema-driven-settings.md  sdk-publishing.md
framework/docs/ui-proposal/: Image 10.html  Image 12.html  Image 14.html  Image 15.html  Image 18.markdown  Image 2.html  Image 4.html  Image 6.html  Image 8.html
framework/game/: Cargo.toml  README.md
framework/game-wasm-host/: Cargo.toml
framework/game-wasm-host/src/: bindings.rs  lib.rs
framework/game/src/: lib.rs  spectator_tests.rs
framework/games/checkers/: Cargo.toml  manifest.json
framework/games/checkers/client/: about.html  checkers_web.js  config.html  index.html  result.html
framework/games/checkers/scripts/: build-game-zip.ps1  build-game-zip.sh
framework/games/checkers/web/: Cargo.toml
framework/games/my_game/: Cargo.toml  README.md  gamedev.toml  manifest.json
framework/games/my_game/.cargo/: config.toml
framework/games/my_game/bevy/: Cargo.toml
framework/games/my_game/client/: about.html  config.html  index.html  my_game_bevy.js  result.html
framework/games/my_game/component/: Cargo.toml
framework/games/my_game/logic/: Cargo.toml
framework/games/my_game/tests/: Cargo.toml
framework/games/tic_tac_toe/: contract.json  logic.wasm  manifest.json
framework/games/tic_tac_toe/client/: about.html  config.html  index.html  result.html
framework/games/tic_tac_toe/scripts/: build-game-zip.ps1  build-game-zip.sh
framework/games/tic_tac_toe/web/: config.html  index.html  package-lock.json  package.json  result.html  tailwind.config.js  tsconfig.json  vite.config.ts
framework/games/tic_tac_toe_bot/: gamedev.toml
framework/lobby/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind-input.css  tailwind.config.js
framework/lobby/assets/: critical.css  lobby.css  tailwind.css
framework/lobby/src/: main.rs  models.rs
framework/lobby/src/api/: config_bridge.rs  graphql.rs  mod.rs  subscriptions.rs
framework/lobby/src/components/: mod.rs
framework/lobby/src/pages/: admin.rs  auth.rs  cli_auth.rs  developer.rs  friends.rs  game_detail.rs  game_result.rs  games.rs  home.rs  lobbies.rs  lobby_room.rs  mod.rs  profile.rs  settings.rs
framework/lobby/src/stub/: demo_api.rs  demo_images.rs  demo_mode.rs  mod.rs
framework/packaging/: README.md
framework/packaging/chocolatey/: gamedev-cli.nuspec
framework/packaging/chocolatey/tools/: chocolateyinstall.ps1
framework/packaging/homebrew/: gamedev-cli.rb
framework/packaging/scoop/: gamedev-cli.json
framework/packaging/winget/: UPJS.GDD.GamedevCli.yaml
framework/platform/: manifest.json
framework/scripts/: backup.sh  dev-backend.ps1  dev-lobby.ps1  dev-lobby.sh  docker-cargo-chef-stubs.sh  generate-deploy-keys.py  github-tag-exists.sh  package-cli-image-bundle.py  restore.sh  trigger-deploy-webhook.py  update-cli-manifest.py  validate-release-pipeline-fix.ps1  verify-cli-image-bundle.py
framework/sdk/: README.md
framework/sdk/examples/bevy-basic/: Cargo.toml
framework/sdk/examples/dioxus-basic/: Cargo.toml
framework/sdk/examples/js-basic/: README.md
framework/sdk/java/: README.md  WIT_VERSIONS.md
framework/sdk/java/component-template/: build.gradle.kts  pom.xml  settings.gradle.kts
framework/sdk/java/game/: build.gradle.kts  settings.gradle.kts
framework/sdk/js/: package.json  tsconfig.json
framework/sdk/scripts/: check-generated-types.ps1  check-generated-types.sh  package-java-component.ps1  package-java-component.sh  stage-tic-tac-toe-fixture.ps1  stage-tic-tac-toe-fixture.sh
framework/server/: Cargo.toml  README.md
framework/server/migrations/: 20250403000001_create_users.sql  20250403000002_create_game_instances.sql  20250404000001_users_password_hash.sql  20250404000002_pregame_lobbies.sql  20250405000003_lobby_lifecycle_chat.sql  20250406000001_game_finish_results.sql  20260406000002_game_uploads_and_roles.sql  20260407000001_lobby_seat_ready.sql  20260407000002_publish_tokens.sql  20260408000001_publish_tokens_label.sql  20260409000001_game_storefront.sql  20260610000001_badges_notifications.sql  20260613000001_stub_replacement.sql  20260616000001_google_oauth.sql  20260617000001_friends.sql  20260617000002_game_identity.sql  20260622000001_bots_and_contract.sql  20260622000002_bot_categories_and_requests.sql  20260622000003_bot_settings.sql
framework/server/src/: auth_password.rs  auth_sessions.rs  bot_api_key.rs  bot_db.rs  bot_registry.rs  bot_service.rs  bot_upload.rs  component_db.rs  db.rs  deploy_webhook.rs  friends.rs  game_contract.rs  game_db.rs  game_registry.rs  game_service.rs  game_storefront.rs  game_upload.rs  google_oauth.rs  graphql_api.rs  lib.rs  lobby_db.rs  logging.rs  main.rs  platform_manifest.rs  platform_stats.rs  settings_validation.rs  test_support.rs  user_engagement.rs  wasm.rs
framework/server/tests/: admin_graphql.rs  engagement.rs  java_component.rs  lobby_flow.rs  spectator_game.rs  tic_tac_toe_component.rs
framework/tic_tac_toe/: Cargo.toml
framework/tic_tac_toe/src/: lib.rs
framework/tools/gamedev-cli/: Cargo.toml  README.md  install.ps1  install.sh  manifest.json
framework/wasm/: Cargo.toml
framework/wasm/src/: bindings.rs  lib.rs  serialization.rs
framework/wasm/wit/: world.wit
framework/wasm_game/: Cargo.toml
framework/wasm_game/src/: lib.rs  serialization.rs
framework/zolik/: Cargo.toml
framework/zolik/src/: lib.rs
(+263 files in other folders)
