[package]
name = "lobby"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Pin to match `dx` from `cargo install dioxus-cli` (0.7.x CLI ↔ 0.7.x crate).
dioxus = "=0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.6", features = ["http", "websocket"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
gloo-events = "0.2"
urlencoding = "2"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "MessageEvent",
    "Event",
    "HtmlIFrameElement",
    "Storage",
] }
jsonschema = { version = "0.45.0", default-features = false }
