[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.3.0"
anyhow = "1.0.98"
futures-util = "0.3.31"
rmp-serde = "1.3.0"
serde = "1.0.219"
wasmtime = { version = "34.0.1", features = ["async"] }
wasmtime-wasi = "34.0.1"
common = { path = "../common" }
serde_urlencoded = "0.7.1"
uuid = { version = "1.17.0", features = ["v4", "v6"] }
serde_json = "1.0.140"
