[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6"
actix-web = "4.11.0"
actix-ws = "0.3.0"
anyhow = "1.0.98"
async-channel = "2.5.0"
async-graphql = "7.0"
async-graphql-actix-web = "7.0"
actix = "0.13.5"
actix-web-actors = "4.3.1"
base64 = "0.22.1"
futures-util = "0.3.31"
rmp-serde = "1.3.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
argon2 = "0.5"
password-hash = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tokio = { version = "1.48.0", features = ["macros", "sync"] }
uuid = { version = "1.17.0", features = ["v4", "v6"] }
wasmtime = { version = "37.0.2", features = ["async"] }
wasmtime-wasi = "37.0.2"
