[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
game = { version = "0.1.0", path = "../game" }
rmp-serde = "1.3.0"
serde = "1.0.219"
serde_json = "1.0.140"
tic_tac_toe = { path = "../tic_tac_toe" }
wit-bindgen = "0.46.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wasm"

[package.metadata.component.dependencies]
