[package]
name = "wasm_game"
version = "0.1.0"
edition = "2024"

[build]
target = "wasm32-wasip1"

[lib]
crate-type = ["cdylib"]

[dependencies]
game = { version = "0.1.0", path = "../game" }
rmp-serde = "1.3.0"
serde = "1.0.219"
serde_json = "1.0.140"
tic_tac_toe = { path = "../tic_tac_toe" }
common = { path = "../common" }