[package]
name = "checkers_web"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "default_font",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "png",
    "webgl2",
] }
checkers = { path = "../rust/logic" }
console_error_panic_hook = "0.1"
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.11", features = ["js"] }
web-sys = { version = "0.3.77", features = [
    "console",
    "ErrorEvent",
    "Location",
    "MessageEvent",
    "WebSocket",
    "Window",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
web-sys = { version = "0.3.77", features = [
    "console",
    "ErrorEvent",
    "Location",
    "MessageEvent",
    "WebSocket",
    "Window",
] }

[[bin]]
name = "checkers_web"
path = "src/main.rs"
