[package]
name = "my_game_component"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib"]

[dependencies]
my_game_logic = { path = "../logic" }
game-wasm-host = { path = "../../../game-wasm-host" }

[package.metadata.component]
package = "component:wasm"

[package.metadata.component.dependencies]
