[package]
name = "upjs-gdd-shared-types"
version = "0.1.0"
edition = "2024"
description = "Shared types for UPJŠ GDD Platform Rust SDK and TypeScript export"
license = "MIT"
repository = "https://github.com/matusem/ipel-gamedev"
readme = "README.md"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", optional = true }

[features]
default = []
typegen = ["dep:ts-rs"]
