[package]
name = "upjs-gdd-rust-shared"
version = "0.1.0"
edition = "2024"
description = "Rust HTTP/GraphQL helpers for UPJŠ GDD Platform game projects"
license = "MIT"
repository = "https://github.com/matusem/ipel-gamedev"
readme = "README.md"

[dependencies]
anyhow = "1"
upjs-gdd-shared-types = { path = "../shared-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
serde_json = "1"
