[package]
name = "checkers_component"
version = "0.1.0"
edition = "2024"

[dependencies]
game-wasm-host = { path = "../../../../game-wasm-host" }
checkers = { path = "../logic" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wasm"

[package.metadata.component.dependencies]
